syntax="proto3";

option go_package="./currencyProto";

package currencyProto;

message CurrencyRequest {
    string From = 1;
    string To = 2;
    float amount = 3;
}

message CurrencyResponse {
    bool success = 1;
    float rate = 2;
    float input_amount = 3;
    float exchange_amount = 4;
}


message CurrencyRequestList {
    repeated CurrencyRequest requests = 1;
}

message CurrencyResponseList {
    repeated CurrencyResponse responses = 1;
}




service Converter {
    rpc CurrencyConverter(CurrencyRequest) returns (CurrencyResponse);

    rpc CurrencyConverterServerStreaming(CurrencyRequestList) returns (stream CurrencyResponse);
    
    rpc CurrencyConverterClientStreaming(stream CurrencyRequest) returns (CurrencyResponseList);

    rpc CurrencyConverterBidirectionalStreaming(stream CurrencyRequest) returns (stream CurrencyResponse);
}

